--- a/website/about-us/index-v2.html
+++ b/website/about-us/index-v2.html
@@ -10,59 +10,61 @@
             <h1>讓旅行變簡單</h1>
         </header>
         <section class="member-intro">
-            <div>
-                <h2>團隊成員</h2>
-            </div>
-            <div class="member-info">
-                <div class="member-card">
-                    <a href="https://rollens.github.io/wp2017/" target="_blank">
-                        <div class="brief">
-                            <span>執行長/工程師</span>
-                            <h3>葛綜棠</h3>
-                            <span class="more">About Me</span>
-                        </div>
-                        <img src="../images/figure-picture-01.jpg">
-                    </a>
+            <div class="container">
+                <div>
+                    <h2>團隊成員</h2>
                 </div>
-                <div class="member-card">
-                    <a href="https://ycvoz.github.io/wp2017/" target="_blank">
-                        <div class="brief">
-                            <span>工程師</span>
-                            <h3>陳宥丞</h3>
-                            <span class="more">About Me</span>
-                        </div>
-                        <img src="../images/figure-picture-02.jpg">
-                    </a>
-                </div>
-                <div class="member-card">
-                    <a href="https://george81019.github.io/" target="_blank">
-                        <div class="brief">
-                            <span>工程師</span>
-                            <h3>張庭華</h3>
-                            <span class="more">About Me</span>
-                        </div>
-                        <img src="../images/figure-picture-03.jpg">
-                    </a>
-                </div>
-                <div class="member-card">
-                    <a href="https://leolee2017.github.io/wp2017/" target="_blank">
-                        <div class="brief">
-                            <span>工程師</span>
-                            <h3>李佶龍</h3>
-                            <span class="more">About Me</span>
-                        </div>
-                        <img src="../images/figure-picture-04.jpg">
-                    </a>
-                </div>
-                <div class="member-card">
-                    <a href="" target="_blank">
-                        <div class="brief">
-                            <span>工程師</span>
-                            <h3>黃聖心</h3>
-                            <span class="more">About Me</span>
-                        </div>
-                        <img src="../images/figure-picture-05.jpg">
-                    </a>
+                <div class="member-info">
+                    <div class="member-card">
+                        <a href="https://rollens.github.io/wp2017/" target="_blank">
+                            <div class="brief">
+                                <span>執行長/工程師</span>
+                                <h3>葛綜棠</h3>
+                                <span class="more">About Me</span>
+                            </div>
+                            <img src="../images/figure-picture-01.jpg">
+                        </a>
+                    </div>
+                    <div class="member-card">
+                        <a href="https://ycvoz.github.io/wp2017/" target="_blank">
+                            <div class="brief">
+                                <span>工程師</span>
+                                <h3>陳宥丞</h3>
+                                <span class="more">About Me</span>
+                            </div>
+                            <img src="../images/figure-picture-02.jpg">
+                        </a>
+                    </div>
+                    <div class="member-card">
+                        <a href="https://george81019.github.io/" target="_blank">
+                            <div class="brief">
+                                <span>工程師</span>
+                                <h3>張庭華</h3>
+                                <span class="more">About Me</span>
+                            </div>
+                            <img src="../images/figure-picture-03.jpg">
+                        </a>
+                    </div>
+                    <div class="member-card">
+                        <a href="https://leolee2017.github.io/wp2017/" target="_blank">
+                            <div class="brief">
+                                <span>工程師</span>
+                                <h3>李佶龍</h3>
+                                <span class="more">About Me</span>
+                            </div>
+                            <img src="../images/figure-picture-04.jpg">
+                        </a>
+                    </div>
+                    <div class="member-card">
+                        <a href="" target="_blank">
+                            <div class="brief">
+                                <span>工程師</span>
+                                <h3>黃聖心</h3>
+                                <span class="more">About Me</span>
+                            </div>
+                            <img src="../images/figure-picture-05.jpg">
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
