--- a/website/about-us/index.html
+++ b/website/about-us/index.html
@@ -94,7 +94,7 @@
                         </a>
                     </div>
                     <div class="member-card">
-                        <a href="https://luffy.ee.ncku.edu.tw/~kevinhang2003/http/>" target="_blank">
+                        <a href="https://luffy.ee.ncku.edu.tw/~kevinhang2003/http/" target="_blank">
                             <div class="brief">
                                 <span>工程帥</span>
                                 <h3>黃聖心</h3>
